--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Repository for CS-324</h1>
 <a href="lab02/index.html">lab 2 </a>
 <a href="lab03/index.html">lab 3 </a>
+<a href="Lab04/index.html">Lab 04 </a>
