--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <a href="lab02/index.html">lab 2 </a>
 <a href="lab03/index.html">lab 3 </a>
 <a href="Lab04/index.html">Lab 04 </a>
+<a href="Lab05/index.html">Lab 05</a>
