--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <a href="lab03/index.html">lab 3 </a>
 <a href="Lab04/index.html">Lab 04 </a>
 <a href="Lab05/index.html">Lab 05 </a> 
+<a href="Lab06/index.html">Lab 06 </a> 
 
