--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h1>Repository for CS-324</h1>
-<a href="lab02/index.html">lab 2 </a>
-<a href="lab03/index.html">lab 3 </a>
-<a href="Lab04/index.html">Lab 04 </a>
-<a href="Lab05/index.html">Lab 05 </a> 
-<a href="Lab06/index.html">Lab 06 </a> 
-<a href="Lab07/index.html">Lab07</a>
+<a href="lab02/index.html">lab 2</a><br>
+<a href="lab03/index.html">lab 3</a><br>
+<a href="Lab04/index.html">Lab 04</a><br>
+<a href="Lab05/index.html">Lab 05</a><br>
+<a href="Lab06/index.html">Lab 06</a><br>
+<a href="Lab07/index.html">Lab07</a><br>
+<a href="Lab08/index.html">Lab08</a><br>
