Fix image paths for Lab08 lazy loading

--- a/Lab08/lazy_figma.html
+++ b/Lab08/lazy_figma.html
@@ -31,27 +31,27 @@
 <body>
   <h1>Hamza Save Mart – Figma Screens (Lazy Loaded)</h1>
 
-  <img src="Images/screen1.png" alt="Screen 1">
+  <img src="Images/Screen1.png" alt="Screen 1">
 
   <div class="spacer"></div>
 
   <img class="lazy"
        src=""
-       data-src="Images/screen2.png"
+       data-src="Images/Screen2.png"
        alt="Screen 2">
 
   <div class="spacer"></div>
 
   <img class="lazy"
        src=""
-       data-src="Images/screen3.png"
+       data-src="Images/Screen3.png"
        alt="Screen 3">
 
   <div class="spacer"></div>
 
   <img class="lazy"
        src=""
-       data-src="Images/screen4.png"
+       data-src="Images/Screen4.png"
        alt="Screen 4">
 
   <script>
